samples/_failures_safe/1761602849_bed5cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b7ec852.c: In function ‘process_data’:
./samples/SAFE/__tmp_2b7ec852.c:148:19: error: expected ‘;’ at end of input
  148 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_2b7ec852.c:148:13: error: expected declaration or statement at end of input
  148 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_2b7ec852.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2b7ec852.c:148:13: error: expected declaration or statement at end of input
